# gnome-shell

./: .gitlab-ci.yml  COPYING  HACKING.md  de+neo2.json  meson.build
.gitlab-ci/: build-gnomeos-dependencies.sh  checkout-mutter.sh  install-sysext-dependencies.sh  run-eslint
data/: gnome-shell-dbus-interfaces.gresource.xml  gnome-shell-icons.gresource.xml  gnome-shell-theme.gresource.xml  meson.build  org.gnome.shell.gschema.xml.in  update-osk-layouts.sh
data/dbus-interfaces/: org.freedesktop.fwupd.xml  org.freedesktop.login1.Manager.xml  org.freedesktop.login1.Seat.xml  org.freedesktop.login1.Session.xml  org.freedesktop.login1.User.xml  org.gnome.SessionManager.xml  org.gnome.Shell.Extensions.xml  org.gnome.Shell.xml
data/osk-layouts/: in+mal.json  (+1 more)
docs/: building-and-running.md
js/: js-resources.gresource.xml
lint/: eslintrc-gjs.yml
po/: POTFILES.in  fa.po
src/: gnome-shell-plugin.c  gtkactionmuxer.c  gtkactionmuxer.h  main.c  meson.build  run-js-test.c  shell-app.c  shell-dnd-start-gesture.c  shell-dnd-start-gesture.h  shell-edge-drag-gesture.c  shell-edge-drag-gesture.h  shell-global-private.h  shell-global.c  shell-util.c  shell-util.h  shell-window-preview-layout.c  shell-window-tracker.c  shell-workspace-background.c
tests/: meson.build  run-test.sh.in
tests/openqa/: main.pm
tests/openqa/config/: scenario_definitions.yaml  smbios.txt
tests/openqa/tests/: gnome_disable_update_notification.pm
tests/shell/: basic.js
tests/unit/: breakManager.js  promiseUtils.js  signalTracker.js  signals.js  testUtils.js  timeLimitsManager.js
(+217 files in other folders)
